clean up findbugs and dependency checks